# clustering-mongolia

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
config/: README.md  default.yml
scripts/: test-full.sh  test.sh
src/clustering_mongolia/: cli.py  config_loader.py  create_cluster.py  process_data.py
